# LoreSoftwareRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  convert_to_utf8_bom.py  main copy.cpp  main.cpp
resources/: shader.wgsl
src/: Render.cpp  ResourceManager.cpp
src/include/: BVH.h  Camera.h  Primitives.h  Render.h  ResourceManager.h  Scene.h  tiny_obj_loader.h
thirdparties/eigen/: CMakeLists.txt
thirdparties/eigen/Eigen/: SparseLU
thirdparties/eigen/Eigen/src/IterativeLinearSolvers/: BiCGSTAB.h  IncompleteCholesky.h  IncompleteLUT.h
thirdparties/eigen/Eigen/src/MetisSupport/: MetisSupport.h
thirdparties/eigen/Eigen/src/OrderingMethods/: Ordering.h
thirdparties/eigen/Eigen/src/PaStiXSupport/: PaStiXSupport.h
thirdparties/eigen/Eigen/src/SparseCore/: SparseColEtree.h  SparseTriangularView.h
thirdparties/eigen/Eigen/src/SparseLU/: SparseLU.h  SparseLUImpl.h  SparseLU_Memory.h  SparseLU_Structs.h  SparseLU_SupernodalMatrix.h  SparseLU_Utils.h  SparseLU_column_bmod.h  SparseLU_column_dfs.h  SparseLU_copy_to_ucol.h  SparseLU_heap_relax_snode.h  SparseLU_kernel_bmod.h  SparseLU_panel_bmod.h  SparseLU_panel_dfs.h  SparseLU_pivotL.h  SparseLU_pruneL.h  SparseLU_relax_snode.h
